[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-RQ2"
version = "18.3"
description = "A Flask extension for RQ."
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Jannis Leidel", email = "jannis@leidel.info"}
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "Flask>=0.10",
    "rq>=0.13.0",
    "redis>=2.10.6",
    "rq-scheduler>=0.9.0",
]

[project.urls]
Homepage = "https://flask-rq2.readthedocs.io/"

[project.optional-dependencies]
cli = [
    "Flask-CLI>=0.4.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/AUTHORS",
    "/CHANGELOG.rst",
    "/LICENSE",
    "/README.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flask_rq2"]
